[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragguard"
version = "0.1.0"
description = "Middleware that prevents sensitive information leakage in RAG pipelines by analyzing the context assembly graph"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["rag", "security", "privacy", "llm", "middleware"]
authors = [{name = "RagGuard Contributors"}]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
